--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="uft-8">
-        <link rel="stylesheet" href="resumeStyle.css">
+        <link rel="stylesheet" href="resumeCSS.css">
         <title>Resume</title>
     </head>
     <body style="background-color:aquamarine">
