--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
             <div id="content"><h2>Projects</h2>
         <p>Resume Website (Personal Project, 2019). This website itself! Using HTML and a bit of CSS to shape and structure this webpage. Created this website if people wanted to see this website instead of my resume or to supplement my resume, and to try to show my HTML skills. Using this website to learn more about HTML and CSS.</p>
         <p>Law Firm Database (CSU, Bakersfield. Database Class. 2016). Graphic User Interface for employee to use for defense attorney law firm, allows user to add members and keep track of cases. Used Java as programming language with NetBeans to create front-end. Database stored in Oracle. 
-            Two person team. My jobs included: created SQL queries for database for front-end, created PL/SQL code for back-end functionalities. Made front-end GUI through NetBeans.<br/></p>
+            Two person team. My jobs included: created SQL queries for database for front-end, created PL/SQL code for back-end functionalities. Made front-end GUI through NetBeans.<br/>
+                <center><img src="LawFirm1.png" alt="Law Firm images" style="width:936px;height:408px;"></center><br/></p>
 
         <p>JSMan, Megaman Clone (CSU, Bakersfield. Software Engineering Class. 2015). C++ game playable in Linux, 2D side-scrolling platformer video game utilizing OpenGL to render graphics.
             Five person team. My jobs included: create a game object that moved on the screen, got the character sprites initially on screen, and made multiple game objects such as ground and platforms.<br/></p>
 
         <p>Beat ‘em up (CSU, Bakersfield, Senior Seminar. 2018). Senior Project. Video game with the style of 2D side-scrolling in 3D environment using Unity 3D (game engine). C# as the programming language and Unity API scripting alongside it. 
             Three person team. My jobs included: Camera movement(Camera follows player and area having the camera becoming fixed to certain location), Item system.<br>
-                Side Note: I did some of the sprites for the game and created them with MSPaint and Gimp.</p>
-        </div> <!-- This is the end div for div beginning in Projects -->
+                Side Note: I did some of the sprites for the game and created them with MSPaint and Gimp.<br/>
+                <center><img src="ES_1.png" alt="Senior Project images" style="width:772px;height:279px;"></center><br/></p>
+        </div> 
             <div id="content"><h2>Skills/Technologies</h2>
             Programming Languages: C++, C#, Java, HTML, CSS<br/>
             Technologies: NetBeans, Unity game engine, Ubuntu, Gimp
