--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             Three person team. My jobs included: Camera movement(Camera follows player and area having the camera becoming fixed to certain location), Item system.<br>
                 Side Note: I did some of the sprites for the game and created them with MSPaint and Gimp.
                 <center><img src="ES_1.png" alt="Senior Project images" style="width:772px;height:279px;"></center><br/></p>
-        </div> <!-- This is the end div for div beginning in Projects -->
+        </div> 
             <div id="content"><h2>Skills/Technologies</h2>
             Programming Languages: C++, C#, Java, HTML, CSS<br/>
             Technologies: NetBeans, Unity game engine, Ubuntu, Gimp
             </div>
             
-        </div> <!-- From wrapper -->
+        </div> 
         
     </body>
 </html>
