--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Besides looking for a career in technology, I am an avid gamer. I love video games, mainly action adventure and role-playing games. I enjoy strategy board games too, such as Chess and 7 Wonders, although you'll find that I play at a beginner level. Defeat doesn't scare me from trying again and improving myself.<br>
                 </p></div>
             <div id="content"><h2>Education</h2>
-                <b>Bachelors of Science in Computer Science - Traditional</b>
+                <b>Bachelors of Science in Computer Science - Traditional</b><br/>
         California State University, Bakersfield<br/>
         Bakersfield, CA<br/>
         January 2015 - May 2018<br/>
@@ -36,7 +36,7 @@
             </div>
             <div id="content"><h2>Projects</h2>
                 <p><b>Resume Website</b> (Personal Project, 2019). This website itself! Using HTML and a bit of CSS to shape and structure this webpage. Created this website if people wanted to see this website instead of my resume or to supplement my resume, and to try to show my HTML skills. Using this website to learn more about HTML and CSS.</p>
-        <p>Law Firm Database (CSU, Bakersfield. Database Class. 2016). Graphic User Interface for employee to use for defense attorney law firm, allows user to add members and keep track of cases. Used Java as programming language with NetBeans to create front-end. Database stored in Oracle. 
+                <p><b>Law Firm Database</b> (CSU, Bakersfield. Database Class. 2016). Graphic User Interface for employee to use for defense attorney law firm, allows user to add members and keep track of cases. Used Java as programming language with NetBeans to create front-end. Database stored in Oracle. 
             
             Two person team. My jobs included: created SQL queries for database for front-end, created PL/SQL code for back-end functionalities. Made front-end GUI through NetBeans.<br/>
                 <center><img src="LawFirm1.png" alt="Law Firm images" style="width:936px;height:408px;"></center><br/></p>
