--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         
         </div>
             <div id="content"><h2>About Me</h2>
-            <p>I am a Computer Science graduate looking to find any positions or jobs related to technology. So anything from Information Technology jobs to Software Development. Databases, websites, and application development such as video games, mobile, and desktop interest me.<br><br>
-                Besides looking for a career in technology, I am an avid gamer. I love video games, mainly action adventure and role-playing games. I enjoy strategy board games too, such as Chess and 7 Wonders, although you'll find that I play at a beginner level. Defeat doesn't scare me from trying again and improving myself.<br>
+            <p>I am a Computer Science graduate, currently working as a Programmer. I am looking to find any positions or jobs related to technology. So anything from Information Technology jobs to Software Development. Databases, websites, and application development. <br><br>
+                <br>
                 </p></div>
             <div id="content"><h2>Education</h2>
                 <b>Bachelors of Science in Computer Science - Traditional</b><br/>
