Updated Index for description changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         </div>
             <div id="content"><h2>About Me</h2>
-            <p>I am a Computer Science graduate, currently working as a Programmer. I am looking to find any positions or jobs related to technology. So anything from Information Technology jobs to Software Development. Databases, websites, and application development. <br><br>
+            <p>I have my Bachelors Degree in Computer Science and I'm currently working as a Programmer 1. I am looking to find any positions or jobs related to technology. So anything from Information Technology jobs to Software Development. Databases, websites, and application development. <br><br>
                 <br>
                 </p></div>
             <div id="content"><h2>Education</h2>
